--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Johonatan Hernandez Machado - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Johonatan Hernandez Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, I'm Johonatan Hernandez Machado</h1>
-    <p>This is my professional portfolio deployed via GitHub Pages.</p>
+  <h1>Portafolio en construcción</h1>
+  <p>Este es el sitio compilado listo para desplegar en GitHub Pages.</p>
 </body>
 </html>
